--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Our Website</title>
+    <title>Line Chart</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
-        <h1>Explore Our World</h1>
-        <p>Your journey begins here!</p>
+        <h1>Line Chart</h1>
+        <p>Explore the data trends with our line chart.</p>
     </header>
     <section>
-        <h2>Page 1: Introduction</h2>
-        <p>Welcome to the introduction page. We are thrilled to have you here. Explore the beauty of our website and embark on an exciting adventure.</p>
-        <button onclick="showAlert()">Click me</button>
+        <h2> Line Chart</h2>
+        <canvas id="lineChart" width="400" height="200"></canvas>
     </section>
 
     <script src="script.js"></script>
+    <script src="lineChart.js"></script>
 </body>
 </html>
