--- a/page1.html
+++ b/page1.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover</title>
+    <title>Pie Chart</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
-        <h1>Discover Our Treasures</h1>
-        <p>Uncover the hidden gems of our website.</p>
+        <h1>Pie Chart</h1>
+        <p>Delve into the data distribution with our pie chart.</p>
     </header>
     <section>
-        <h2>Page 2: Treasures</h2>
-        <p>Page 2 is all about the treasures that await you. Each click brings you closer to a new discovery. Are you ready?</p>
-        <button onclick="showAlert()">Click me</button>
+        <h2>Page 2: Pie Chart</h2>
+        <canvas id="pieChart" width="400" height="200"></canvas>
     </section>
 
     <script src="script.js"></script>
+    <script src="pieChart.js"></script>
 </body>
 </html>
