--- a/index.html
+++ b/index.html
@@ -1,53 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Line Chart</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-    <header>
-        <h1>Line Chart</h1>
-        <p>Explore the data trends with our line chart.</p>
-    </header>
-    <section>
-        <h2> Line Chart</h2>
-        <canvas id="lineChart" width="400" height="200"></canvas>
-    </section>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Homework 6</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container">
+      <h1>Hello, Davids' webpages for calculation</h1>
 
-    <script src="script.js"></script>
-    <script src="lineChart.js"></script>
-
-    // lineChart.js
-// Function to display a line chart
-function displayLineChart() {
-    var data = {
-        labels: ['January', 'February', 'March', 'April', 'May'],
-        datasets: [{
-            label: 'Monthly Data',
-            data: [10, 25, 15, 30, 20],
-            borderColor: 'rgba(75, 192, 192, 1)',
-            borderWidth: 1,
-            fill: false
-        }]
-    };
-
-    var options = {
-        scales: {
-            y: {
-                beginAtZero: true
-            }
-        }
-    };
-
-    var ctx = document.getElementById('lineChart').getContext('2d');
-    var myLineChart = new Chart(ctx, {
-        type: 'line',
-        data: data,
-        options: options
-    });
-}
-
-</body>
+      <a href = "page1.html">Pie Chart </a>
+      <br>
+      <br>
+      <a href = "page2.html">Substraction Page </a>
+      <br>
+      <br>
+      <a href = "page3.html">Multiplication Page </a>
+      <br>
+      <br>
+      <a href = "page4.html">Division Page </a>
+      <br>
+      <br>
+      <a href = "page5.html">Custom formula Page </a>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  </body>
 </html>
