--- a/page1.html
+++ b/page1.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pie Chart</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Include Chart.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Pie Chart</h1>
-        <p>Delve into the data distribution with our pie chart.</p>
-    </header>
-    <section>
-        <h2>Page 2: Pie Chart</h2>
-        <canvas id="pieChart" width="400" height="200"></canvas>
-    </section>
+  <h2>Pie Chart Data</h2>
 
-    <script src="script.js"></script>
-    <script src="pieChart.js"></script>
+  <!-- Create a container for the chart -->
+  <div style="width: 80%; margin: auto;">
+    <canvas id="myPieChart"></canvas>
+  </div>
+
+  <script>
+    // Sample data (replace with your own numbers and names)
+    var data = {
+      labels: ['Category 1', 'Category 2', 'Category 3'],
+      datasets: [{
+        data: [30, 50, 20], // replace with your data
+        backgroundColor: ['red', 'blue', 'green'], // replace with your colors
+      }]
+    };
+
+    // Get the context of the canvas element we want to select
+    var ctx = document.getElementById('myPieChart').getContext('2d');
+
+    // Create a pie chart
+    var myPieChart = new Chart(ctx, {
+      type: 'pie',
+      data: data,
+    });
+  </script>
 </body>
 </html>
