--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello, Davids' webpages for calculation</h1>
+      <h1>Hello, Wecome to my charts</h1>
 
       <a href = "page1.html">Pie Chart </a>
       <br>
       <br>
-      <a href = "page2.html">Substraction Page </a>
+      <a href = "page2.html">Bar chart </a>
       <br>
       <br>
       <a href = "page3.html">Multiplication Page </a>
