--- a/page2.html
+++ b/page2.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doughnut Chart</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Include Chart.js library -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Doughnut Chart</h1>
-        <p>Discover the proportions with our doughnut chart.</p>
-    </header>
-    <section>
-        <h2>Page 3: Doughnut Chart</h2>
-        <canvas id="doughnutChart" width="400" height="200"></canvas>
-    </section>
+  <h2>Bar Chart Data</h2>
 
-    <script src="script.js"></script>
-    <script src="doughnutChart.js"></script>
+  <!-- Create a container for the chart -->
+  <div style="width: 80%; margin: auto;">
+    <canvas id="myBarChart"></canvas>
+  </div>
+
+  <script>
+    // Sample data (replace with your own numbers and names)
+    var data = {
+      labels: ['Category 1', 'Category 2', 'Category 3'],
+      datasets: [{
+        label: 'Values',
+        data: [30, 50, 20], // replace with your data
+        backgroundColor: ['red', 'blue', 'green'], // replace with your colors
+        borderColor: ['red', 'blue', 'green'], // replace with your colors
+        borderWidth: 1
+      }]
+    };
+
+    // Get the context of the canvas element we want to select
+    var ctx = document.getElementById('myBarChart').getContext('2d');
+
+    // Create a bar chart
+    var myBarChart = new Chart(ctx, {
+      type: 'bar',
+      data: data,
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true
+          }
+        }
+      }
+    });
+  </script>
 </body>
 </html>
