--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
       <a href = "page1.html">Pie Chart </a>
       <br>
       <br>
-      <a href = "page2.html">Bar chart </a>
+      <a href = "page2.html">Bar Chart </a>
       <br>
       <br>
-      <a href = "page3.html">Multiplication Page </a>
+      <a href = "page3.html">Bubble Chart </a>
       <br>
       <br>
-      <a href = "page4.html">Division Page </a>
+      <a href = "page4.html">Line Chart </a>
       <br>
-      <br>
-      <a href = "page5.html">Custom formula Page </a>
+
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
