--- a/page3.html
+++ b/page3.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <h2>Scatter Chart Data</h2>
+  <h2>Scatter Chart</h2>
 
   <!-- Create a container for the chart -->
   <div style="width: 80%; margin: auto;">
