--- a/page4.html
+++ b/page4.html
@@ -4,25 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Include Chart.js library -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <h2>Line Chart Data</h2>
+  <h2>Line Chart</h2>
 
-  <!-- Create a container for the chart -->
+
   <div style="width: 80%; margin: auto;">
     <canvas id="myLineChart"></canvas>
   </div>
 
   <script>
-    // Sample data (replace with your own numbers and names)
+
     var data = {
-      labels: ['Category 1', 'Category 2', 'Category 3'],
+      labels: ['Book 1', 'Book 2', 'Book 3'],
       datasets: [{
         label: 'Values',
-        data: [30, 50, 20], // replace with your data
-        borderColor: 'blue', // replace with your color
+        data: [30, 50, 20], 
+        borderColor: 'blue', 
         borderWidth: 2,
         fill: false
       }]
