--- a/page1.html
+++ b/page1.html
@@ -4,31 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Include Chart.js library -->
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <h2>Pie Chart Data</h2>
 
-  <!-- Create a container for the chart -->
+
   <div style="width: 80%; margin: auto;">
     <canvas id="myPieChart"></canvas>
   </div>
 
   <script>
-    // Sample data (replace with your own numbers and names)
+
     var data = {
-      labels: ['Category 1', 'Category 2', 'Category 3'],
+      labels: ['Book 1', 'Book 2', 'Book 3'],
       datasets: [{
-        data: [30, 50, 20], // replace with your data
-        backgroundColor: ['red', 'blue', 'green'], // replace with your colors
+        data: [30, 50, 20], 
+        backgroundColor: ['red', 'blue', 'green'], 
       }]
     };
 
-    // Get the context of the canvas element we want to select
+
     var ctx = document.getElementById('myPieChart').getContext('2d');
 
-    // Create a pie chart
     var myPieChart = new Chart(ctx, {
       type: 'pie',
       data: data,
