--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <h2>Pie Chart Data</h2>
+  <h2>Pie Chart </h2>
 
 
   <div style="width: 80%; margin: auto;">
