--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello, Wecome to my charts</h1>
+      <h1>Hello, Welcome to my charts</h1>
 
       <a href = "page1.html">Pie Chart </a>
       <br>
