--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href = "page2.html">Bar Chart </a>
       <br>
       <br>
-      <a href = "page3.html">Bubble Chart </a>
+      <a href = "page3.html">Scatter Chart </a>
       <br>
       <br>
       <a href = "page4.html">Line Chart </a>
