--- a/page1.html
+++ b/page1.html
@@ -1,23 +1,112 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Third-Party Libraries Example</title>
 
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- Moment.js -->
+    <script src="https://cdn.jsdelivr.net/npm/moment"></script>
+
+    <!-- Axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
 <body>
- <div id="jquery-example">
+
+    <h1>Third-Party Libraries Example</h1>
+
+    <!-- jQuery Example -->
+    <div id="jquery-example">
         <h2>jQuery Example</h2>
         <p id="jquery-result">This text will be changed by jQuery.</p>
     </div>
 
-  <script>
+    <!-- Chart.js Example -->
+    <div id="chartjs-example">
+        <h2>Chart.js Example</h2>
+        <canvas id="myChart" width="400" height="200"></canvas>
+    </div>
 
-    $(document).ready(function() {
+    <!-- Moment.js Example -->
+    <div id="momentjs-example">
+        <h2>Moment.js Example</h2>
+        <p id="moment-result">This text will show the current date using Moment.js.</p>
+    </div>
+
+    <!-- Axios Example -->
+    <div id="axios-example">
+        <h2>Axios Example</h2>
+        <ul id="axios-results"></ul>
+    </div>
+
+    <script>
+        // jQuery Example
+        $(document).ready(function() {
             $("#jquery-result").text("Text changed by jQuery!");
-        });;
-  </script>
+        });
+
+        // Chart.js Example
+        var ctx = document.getElementById('myChart').getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                datasets: [{
+                    label: '# of Votes',
+                    data: [12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+
+        // Moment.js Example
+        var currentDate = moment().format('MMMM Do YYYY, h:mm:ss a');
+        $("#moment-result").text("Current date using Moment.js: " + currentDate);
+
+        // Axios Example
+        axios.get('https://jsonplaceholder.typicode.com/posts')
+            .then(function(response) {
+                var results = document.getElementById('axios-results');
+                response.data.forEach(function(post) {
+                    var listItem = document.createElement('li');
+                    listItem.textContent = post.title;
+                    results.appendChild(listItem);
+                });
+            })
+            .catch(function(error) {
+                console.error('Error fetching data from the server:', error);
+            });
+    </script>
+
 </body>
 </html>
