--- a/page1.html
+++ b/page1.html
@@ -3,101 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Third-Party Libraries Example</title>
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>Moment.js Example</title>
 
     <!-- Moment.js -->
     <script src="https://cdn.jsdelivr.net/npm/moment"></script>
 
-    <!-- Axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
 
+        h1 {
+            color: #333;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: auto;
+        }
+
+        #momentjs-example {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
 
-    <h1>Third-Party Libraries Example</h1>
+    <div class="container">
+        <h1>Moment.js Example</h1>
 
-    <!-- jQuery Example -->
-    <div id="jquery-example">
-        <h2>jQuery Example</h2>
-        <p id="jquery-result">This text will be changed by jQuery.</p>
-    </div>
-
-    <!-- Chart.js Example -->
-    <div id="chartjs-example">
-        <h2>Chart.js Example</h2>
-        <canvas id="myChart" width="400" height="200"></canvas>
-    </div>
-
-    <!-- Moment.js Example -->
-    <div id="momentjs-example">
-        <h2>Moment.js Example</h2>
-        <p id="moment-result">This text will show the current date using Moment.js.</p>
-    </div>
-
-    <!-- Axios Example -->
-    <div id="axios-example">
-        <h2>Axios Example</h2>
-        <ul id="axios-results"></ul>
+        <!-- Moment.js Example -->
+        <div id="momentjs-example">
+            <h2>Displaying and Formatting Dates</h2>
+            <p id="current-date"></p>
+            <p id="formatted-date"></p>
+        </div>
     </div>
 
     <script>
-        // jQuery Example
-        $(document).ready(function() {
-            $("#jquery-result").text("Text changed by jQuery!");
-        });
-
-        // Chart.js Example
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var data = {
-      labels: ['Book 1', 'Book 2', 'Book 3'],
-      datasets: [{
-        label: 'Values',
-        data: [30, 50, 20], 
-        backgroundColor: ['red', 'blue', 'green'], 
-        borderColor: ['red', 'blue', 'green'],
-        borderWidth: 1
-      }]
-    };
-
-
-    var ctx = document.getElementById('myBarChart').getContext('2d');
-
-
-    var myBarChart = new Chart(ctx, {
-      type: 'bar',
-      data: data,
-      options: {
-        scales: {
-          y: {
-            beginAtZero: true
-          }
-        }
-      }
-        });
-
         // Moment.js Example
-        var currentDate = moment().format('MMMM Do YYYY, h:mm:ss a');
-        $("#moment-result").text("Current date using Moment.js: " + currentDate);
+        var currentDate = moment();
+        var formattedDate = currentDate.format('MMMM Do YYYY, h:mm:ss a');
 
-        // Axios Example
-        axios.get('https://jsonplaceholder.typicode.com/posts')
-            .then(function(response) {
-                var results = document.getElementById('axios-results');
-                response.data.forEach(function(post) {
-                    var listItem = document.createElement('li');
-                    listItem.textContent = post.title;
-                    results.appendChild(listItem);
-                });
-            })
-            .catch(function(error) {
-                console.error('Error fetching data from the server:', error);
-            });
+        document.getElementById('current-date').textContent = 'Current Date: ' + currentDate.toString();
+        document.getElementById('formatted-date').textContent = 'Formatted Date: ' + formattedDate;
     </script>
 
 </body>
