--- a/page1.html
+++ b/page1.html
@@ -40,7 +40,7 @@
     $(document).ready(function() {
         // Handle button click
         $("#exampleButton").click(function() {
-            // Change the content of the output div using jQuery
+            Change the content of the output div using jQuery
             $("#exampleOutput").html("<p>Button clicked!</p>");
         });
     });
