--- a/page1.html
+++ b/page1.html
@@ -3,78 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library Example</title>
+    <title>Axios Example</title>
 
-    <!-- Include jQuery library -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-    <!-- Include Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <!-- Include Chart.js library -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <!-- Include Axios library for making HTTP requests -->
+    <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <!-- Include Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<div class="container mt-5">
-    <h1>Welcome to My Website</h1>
-    
-    <button id="exampleButton" class="btn btn-primary mt-3">Click me!</button>
+    <div class="container">
+        <h1>Axios Example</h1>
 
-    <canvas id="myChart" width="400" height="400" class="mt-3"></canvas>
+        <!-- Axios Example -->
+        <div id="axios-example">
+            <h2>Fetching Data from JSONPlaceholder API</h2>
+            <ul id="axios-results"></ul>
+        </div>
+    </div>
 
-    <div id="exampleOutput" class="mt-3"></div>
-</div>
-
-<!-- Your custom scripts -->
-<script>
-    // jQuery example
-    $(document).ready(function() {
-        // Handle button click
-        $("#exampleButton").click(function() {
-            Change the content of the output div using jQuery
-            $("#exampleOutput").html("<p>Button clicked!</p>");
-        });
-    });
-
-    // Chart.js example
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-            datasets: [{
-                label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
-    });
-
-    // Axios example (making a simple GET request)
-    axios.get('https://jsonplaceholder.typicode.com/posts/1')
-        .then(function (response) {
-            console.log(response.data);
-        })
-        .catch(function (error) {
-            console.error(error);
-        });
-</script>
+    <script>
+        // Axios Example
+        axios.get('https://jsonplaceholder.typicode.com/posts')
+            .then(function(response) {
+                var results = document.getElementById('axios-results');
+                response.data.forEach(function(post) {
+                    var listItem = document.createElement('li');
+                    listItem.textContent = post.title;
+                    results.appendChild(listItem);
+                });
+            })
+            .catch(function(error) {
+                console.error('Error fetching data from the server:', error);
+            });
+    </script>
 
 </body>
 </html>
