--- a/page1.html
+++ b/page1.html
@@ -3,38 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Axios Example</title>
+    <title>jQuery Example</title>
 
-    <!-- Axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 </head>
 <body>
 
     <div class="container">
-        <h1>Axios Example</h1>
+        <h1>jQuery Example</h1>
 
-        <!-- Axios Example -->
-        <div id="axios-example">
-            <h2>Fetching Data from JSONPlaceholder API</h2>
-            <ul id="axios-results"></ul>
+        <!-- jQuery Example -->
+        <div id="jquery-example">
+            <h2>Changing Text with jQuery</h2>
+            <p id="jquery-result">This text will be changed by jQuery.</p>
         </div>
     </div>
 
     <script>
-        // Axios Example
-        axios.get('https://jsonplaceholder.typicode.com/posts')
-            .then(function(response) {
-                var results = document.getElementById('axios-results');
-                response.data.forEach(function(post) {
-                    var listItem = document.createElement('li');
-                    listItem.textContent = post.title;
-                    results.appendChild(listItem);
-                });
-            })
-            .catch(function(error) {
-                console.error('Error fetching data from the server:', error);
-            });
+        // jQuery Example
+        $(document).ready(function() {
+            $("#jquery-result").text("Text changed by jQuery!");
+        });
     </script>
 
 </body>
