--- a/page1.html
+++ b/page1.html
@@ -20,17 +20,34 @@
     <!-- D3.js Example -->
     <h2>D3.js Example</h2>
     <div id="d3-chart-container"></div>
-    <script>
-        const d3Data = [10, 20, 30, 40, 50];
+   <div>
+  <canvas id="myChart"></canvas>
+</div>
 
-        d3.select("#d3-chart-container")
-            .selectAll("div")
-            .data(d3Data)
-            .enter()
-            .append("div")
-            .style("height", d => d + "px")
-            .text(d => d);
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script>
+  const ctx = document.getElementById('myChart');
+
+  new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+      datasets: [{
+        label: '# of Votes',
+        data: [12, 19, 3, 5, 2, 3],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
+        }
+      }
+    }
+  });
+</script>
 
     <!-- Plotly.js Example -->
     <h2>Plotly.js Example</h2>
