--- a/page1.html
+++ b/page1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charts Examples</title>
 
-    <!-- D3.js -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+     <!-- Moment.js -->
+    <script src="https://cdn.jsdelivr.net/npm/moment"></script>
 
     <!-- Plotly.js -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -17,21 +17,25 @@
 <body>
     <h1>Charts Examples with D3, Plotly, and Chart.js</h1>
 
-    <!-- D3.js Example -->
-    <h2>D3.js Example</h2>
-    <div id="d3-chart-container"></div>
-   <div>
- <script type="module">
+   <div class="container">
+        <h1>Moment.js Example</h1>
 
-import {forceSimulation, forceCollide, forceX} from "https://cdn.jsdelivr.net/npm/d3-force@3/+esm";
+        <!-- Moment.js Example -->
+        <div id="momentjs-example">
+            <h2>Displaying and Formatting Dates</h2>
+            <p id="current-date"></p>
+            <p id="formatted-date"></p>
+        </div>
+    </div>
 
-const nodes = [{}, {}];
-const simulation = forceSimulation(nodes)
-    .force("x", forceX())
-    .force("collide", forceCollide(5))
-    .on("tick", () => console.log(nodes[0].x));
+    <script>
+        // Moment.js Example
+        var currentDate = moment();
+        var formattedDate = currentDate.format('MMMM Do YYYY, h:mm:ss a');
 
-</script>
+        document.getElementById('current-date').textContent = 'Current Date: ' + currentDate.toString();
+        document.getElementById('formatted-date').textContent = 'Formatted Date: ' + formattedDate;
+    </script>
     <!-- Plotly.js Example -->
     <h2>Plotly.js Example</h2>
     <div id="plotly-chart-container"></div>
@@ -43,12 +47,12 @@ const simulation = forceSimulation(nodes)
         }];
 
         Plotly.newPlot('plotly-chart-container', plotlyData);
-    </script>
+</script>
 
     <!-- Chart.js Example -->
     <div>
-  <canvas id="myChart"></canvas>
-</div>
+      <canvas id="myChart"></canvas>
+    </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
