--- a/page1.html
+++ b/page1.html
@@ -29,6 +29,7 @@
     </div>
 
     <script>
+
         // Moment.js Example
         var currentDate = moment();
         var formattedDate = currentDate.format('MMMM Do YYYY, h:mm:ss a');
@@ -36,7 +37,10 @@
         document.getElementById('current-date').textContent = 'Current Date: ' + currentDate.toString();
         document.getElementById('formatted-date').textContent = 'Formatted Date: ' + formattedDate;
     </script>
+    
     <!-- Plotly.js Example -->
+
+    
     <h2>Plotly.js Example</h2>
     <div id="plotly-chart-container"></div>
     <script>
@@ -50,6 +54,7 @@
 </script>
 
     <!-- Chart.js Example -->
+    <h2>Chart.js Example</h2>
     <div>
       <canvas id="myChart"></canvas>
     </div>
