--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello, Welcome to my charts</h1>
+      <h1>Hello, Welcome to my homewrok 6</h1>
 
-      <a href = "page1.html">Pie Chart </a>
+      <a href = "page.html"> JavaScript </a>
       <br>
     </div>
     
