--- a/page.html
+++ b/page.html
@@ -22,7 +22,7 @@
         <h1>Moment.js</h1>
        
         <div id="momentjs-example">
-            <h2>Displaying and Formatting Dates</h2>
+            <h2>Date</h2>
             <p id="current-date"></p>
             <p id="formatted-date"></p>
         </div>
@@ -67,7 +67,7 @@
     </script>
 
     
-    <h2>Plotly.js Example</h2>
+    <h2>Plotly.js</h2>
     <div id="plotly-chart-container"></div>
     <script>
         const plotlyData = [{
@@ -79,7 +79,7 @@
         Plotly.newPlot('plotly-chart-container', plotlyData);
 </script>
 
-    <h2>Chart.js Example</h2>
+    <h2>Chart.js</h2>
     <div>
       <canvas id="myChart"></canvas>
     </div>
